# cmlibs.utils

./: .gitignore  README.rst  pyproject.toml  setup.py
.github/workflows/: deploy.yaml  run_tests.yaml
docs/: conf.py  index.rst
opencmiss/utils/: algorithms.py  image.py  vectorops.py  zinc.py
opencmiss/utils/maths/: algorithms.py  vectorops.py
opencmiss/utils/zinc/: field.py
src/cmlibs/utils/: __init__.py  ui.py
src/cmlibs/utils/zinc/: field.py  finiteelement.py  group.py  mesh.py  node.py  region.py  scene.py
src/opencmiss/utils/: image.py
src/opencmiss/utils/maths/: vectorops.py
src/opencmiss/utils/zinc/: field.py  finiteelement.py  general.py  material.py
tests/: test_zinc.py  test_zinc_field.py  test_zinc_finiteelement.py  test_zinc_group.py  test_zinc_mesh.py  test_zinc_meshrefinement.py  test_zinc_region.py  utilities.py
tests/resources/: quarter_tube.exf  square.exf  two_element_cube.exf  two_element_cube_negative_jacobian.ex3  two_lines.exf  warped_two_element_cube.exf
