[build-system]
requires = ["setuptools>=61.0", "setuptools_scm>=8.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools-git-versioning]
enabled = true

[project]
name = "cmlibs.utils"
dynamic = ["version"]
keywords = ["Utilities", "CMLibs", "Zinc"]
readme = "README.rst"
license = {file = "LICENSE"}
authors = [
    { name="Hugh Sorby", email="h.sorby@auckland.ac.nz" },
]
dependencies = [
    "cmlibs.maths >= 0.5",
    "cmlibs.zinc >= 4.1.3"
]
description = "Utilities for the CMLibs Zinc library."
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

[project.urls]
Homepage = "https://cmlibs.org"
Repository = "https://github.com/CMLibs-Python/cmlibs.utils"

[tool.setuptools_scm]
